Оформила базовую стилизацию

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -68,17 +71,17 @@
     </section>
     <section class="reasons">
       <ul class="reasons-list">
-        <li class="reason-item">
+        <li>
           <h3>Небольшая площадь</h3>
           <span>№3</span>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="reason-item">
+        <li>
           <h3>Красивая дорога</h3>
           <span>№4</span>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li class="reason-item">
+        <li>
           <h3>Мало туристов</h3>
           <span>№5</span>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
@@ -104,7 +107,7 @@
         <label for="children-quantity">Дети:</label>
         <input type="number" name="quantity" id="children-quantity" min="0">
         <p>
-          <input type="submit" value="Найти">
+          <input type="submit" value="Найти" class="finder-btn">
         </p>
       </form>
     </section>
@@ -116,16 +119,16 @@
     <p class="footer-hashtag">#Visitsedona</p>
     <ul class="social-btn-list">
       <li>
-        <a href="#" class="social-btn social-btn-twitter" aria-label="Твиттер">T</a>
+        <a href="#" class="social-btn social-btn-twitter" aria-label="Твиттер">Twitter</a>
       </li>
       <li>
-        <a href="#" class="social-btn social-btn-twitter" aria-label="Фейсбук">Ф</a>
+        <a href="#" class="social-btn social-btn-twitter" aria-label="Фейсбук">Facebook</a>
       </li>
       <li>
-        <a href="#" class="social-btn social-btn-yt" aria-label="Ютьюб">Y</a>
+        <a href="#" class="social-btn social-btn-yt" aria-label="Ютьюб">Youtube</a>
       </li>
     </ul>
-    <p>Website by</p>
+    <p class="footer-copyright">Website by</p>
     <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
       <img src="img/logo-htmlacademy.svg" alt="Лого HTML-Academy" width="115" height="41">
     </a>
