Поправки в оформлении базовой стилизации

--- a/inner.html
+++ b/inner.html
@@ -96,7 +96,7 @@
       <p>
         <img src="img/hotels-1.jpg" alt="Фото гостиницы" width="150" height="100">
       </p>
-      <h3>
+      <h3 class="hotel-name">
         <a href="#">Amara resort &amp; spa</a>
       </h3>
       <div class="hotel-first-column">
@@ -116,7 +116,7 @@
       <p>
         <img src="img/hotels-2.jpg" alt="Фото апартаментов" width="150" height="100">
       </p>
-      <h3>
+      <h3 class="hotel-name">
         <a href="#">Desert Quail Inn</a>
       </h3>
       <div class="hotel-first-column">
@@ -136,7 +136,7 @@
       <p>
         <img src="img/hotels-3.jpg" alt="Фото апартаментов" width="150" height="100">
       </p>
-      <h3>
+      <h3 class="hotel-name">
         <a>Desert Quail Inn</a>
       </h3>
       <div class="hotel-first-column">
