Оформила сетку на флексах

--- a/index.html
+++ b/index.html
@@ -10,129 +10,151 @@
 </head>
 
 <body>
-  <a href="index.html" class="main-logo">
-    <img src="img/logo_mobile.png" alt="Логотип Седоны" width="138" height="70">
-  </a>
-  <nav class="main-navigation">
-    <ul class="site-navigation">
-      <li>
-        <a href="#">Информация</a>
-      </li>
-      <li>
-        <a href="#">Фото и видео</a>
-      </li>
-      <li>
-        <a href="#">Карта штата</a>
-      </li>
-      <li>
-        <a href="inner.html">Гостиницы</a>
-      </li>
-    </ul>
-  </nav>
-  <main>
-    <header class="main-header">
-      <img src="img/header_text_pic.png" alt="Welcome to the gorgeous Sedona" width="500" height="365">
-    </header>
-    <div class="text-block">
-      <p class="slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
-      <p class="text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+  <div class="content">
+    <div class="main-logo">
+      <a href="index.html">
+        <img src="img/logo_mobile.png" alt="Логотип Седоны" width="138" height="70">
+      </a>
     </div>
-    <section class="reason-item">
-      <h3>Настоящий городок</h3>
-      <span>№1</span>
-      <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-      <img src="img/town_full.jpg" alt="Фото города" width="800" height="255">
-    </section>
-    <section class="recommendations">
-      <h2 class="visually-hidden">Рекомендации</h2>
-      <ul class="recommendations-list">
-        <li class="recommendation-item">
-          <img src="img/icon-1.svg" alt="Жилье" width="75" height="72">
-          <h3>Жилье</h3>
-          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+    <nav class="main-navigation">
+      <ul class="site-navigation">
+        <li>
+          <a href="#">Информация</a>
         </li>
-        <li class="recommendation-item">
-          <img src="img/icon-2.svg" alt="Еда" width="75" height="72">
-          <h3>Еда</h3>
-          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        <li>
+          <a href="#">Фото и видео</a>
         </li>
-        <li class="recommendation-item">
-          <img src="img/icon-3.svg" alt="Сувениры" width="75" height="72">
-          <h3>Сувениры</h3>
-          <p>Не только китайского, но и местного производства!</p>
+        <li>
+          <a href="#">Карта штата</a>
+        </li>
+        <li>
+          <a href="inner.html">Гостиницы</a>
         </li>
       </ul>
-    </section>
-    <section class="reason-item">
-      <h3>Там есть мост дьявола</h3>
-      <span>№2</span>
-      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      <img src="img/canyon_full.jpg" alt="Фото каньона" width="800" height="255">
-    </section>
-    <section class="reasons">
-      <ul class="reasons-list">
+    </nav>
+    <main>
+      <header class="main-header">
+        <div class="main-header-text">
+          <img src="img/header_text_pic.png" alt="Welcome to the gorgeous Sedona" width="458" height="352">
+        </div>
+      </header>
+      <div class="text-block">
+        <p class="slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+      </div>
+      <section class="reason-item">
+        <div class="reason-item-text">
+          <h3>Настоящий
+            <br> городок</h3>
+          <p>№1</p>
+          <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+        </div>
+        <div class="reason-item-img">
+          <img src="img/town_full.jpg" alt="Фото города" width="800" height="401">
+        </div>
+      </section>
+      <section class="recommendations">
+        <h2 class="visually-hidden">Рекомендации</h2>
+        <ul class="recommendations-list">
+          <li class="recommendation-item">
+            <img src="img/icon-1.svg" alt="Жилье" width="75" height="72">
+            <h3>Жилье</h3>
+            <p>Рекомендуем пожить в настоящем
+              <br> мотеле, все как в кино!</p>
+          </li>
+          <li class="recommendation-item">
+            <img src="img/icon-2.svg" alt="Еда" width="75" height="72">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте фирменный бургер,
+              <br> вы не разочаруетесь!</p>
+          </li>
+          <li class="recommendation-item">
+            <img src="img/icon-3.svg" alt="Сувениры" width="75" height="72">
+            <h3>Сувениры</h3>
+            <p>Не только китайского, но и местного
+              <br> производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="reason-item reason-item-reverse">
+        <div class="reason-item-text">
+          <h3>Там есть мост дьявола</h3>
+          <p>№2</p>
+          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        </div>
+        <div class="reason-item-img">
+          <img src="img/canyon_full.jpg" alt="Фото каньона" width="800" height="401">
+        </div>
+      </section>
+      <section class="reasons">
+        <ul class="reasons-list">
+          <li>
+            <h3>Небольшая площадь</h3>
+            <span>№3</span>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li>
+            <h3>Красивая дорога</h3>
+            <span>№4</span>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li>
+            <h3>Мало туристов</h3>
+            <span>№5</span>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
+      <section class="searching">
+        <div class="searching-text">
+          <h2>Заинтересовались?</h2>
+          <p>Укажите предполагаемые даты поездки,
+            <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <button type="button" class="button btn-search">Поиск гостиниц в Седоне</button>
+        </div>
+        <form action="https://echo.htmlacademy.ru" class="searching-form">
+          <p>
+            <label for="searching-form-check-in">Дата заезда:</label>
+            <input type="date" name="date" id="searching-form-check-in">
+          </p>
+          <p>
+            <label for="searching-form-check-out">Дата выезда:</label>
+            <input type="date" name="date" id="searching-form-check-out">
+          </p>
+          <label for="adults-quantity">Взрослые:</label>
+          <input type="number" name="quantity" id="adults-quantity" min="1">
+          <label for="children-quantity">Дети:</label>
+          <input type="number" name="quantity" id="children-quantity" min="0">
+          <p>
+            <input type="submit" value="Найти" class="finder-btn">
+          </p>
+        </form>
+      </section>
+      <div class="map">
+        <img src="img/map_full.png" alt="Карта Седоны" width="1200" height="593">
+      </div>
+    </main>
+    <footer class="main-footer">
+      <p class="footer-hashtag footer-item">#Visitsedona</p>
+      <ul class="social-btn-list footer-item">
         <li>
-          <h3>Небольшая площадь</h3>
-          <span>№3</span>
-          <p>Все достопримечательности находятся очень близко</p>
+          <a href="#" class="social-btn social-btn-twitter" aria-label="Твиттер">Twitter</a>
         </li>
         <li>
-          <h3>Красивая дорога</h3>
-          <span>№4</span>
-          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <a href="#" class="social-btn social-btn-twitter" aria-label="Фейсбук">Facebook</a>
         </li>
         <li>
-          <h3>Мало туристов</h3>
-          <span>№5</span>
-          <p>Большинство едет в Гранд Каньон и толпится там</p>
+          <a href="#" class="social-btn social-btn-yt" aria-label="Ютьюб">Youtube</a>
         </li>
       </ul>
-    </section>
-    <section class="searching">
-      <h2>Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки,
-        <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <button type="button" class="button btn-search">Поиск гостиниц в Седоне</button>
-      <form action="https://echo.htmlacademy.ru" class="searching-form">
-        <p>
-          <label for="searching-form-check-in">Дата заезда:</label>
-          <input type="date" name="date" id="searching-form-check-in">
-        </p>
-        <p>
-          <label for="searching-form-check-out">Дата выезда:</label>
-          <input type="date" name="date" id="searching-form-check-out">
-        </p>
-        <label for="adults-quantity">Взрослые:</label>
-        <input type="number" name="quantity" id="adults-quantity" min="1">
-        <label for="children-quantity">Дети:</label>
-        <input type="number" name="quantity" id="children-quantity" min="0">
-        <p>
-          <input type="submit" value="Найти" class="finder-btn">
-        </p>
-      </form>
-    </section>
-    <div class="map">
-      <img src="img/map.png" alt="Карта Седоны" width="768" height="594">
-    </div>
-  </main>
-  <footer class="main-footer">
-    <p class="footer-hashtag">#Visitsedona</p>
-    <ul class="social-btn-list">
-      <li>
-        <a href="#" class="social-btn social-btn-twitter" aria-label="Твиттер">Twitter</a>
-      </li>
-      <li>
-        <a href="#" class="social-btn social-btn-twitter" aria-label="Фейсбук">Facebook</a>
-      </li>
-      <li>
-        <a href="#" class="social-btn social-btn-yt" aria-label="Ютьюб">Youtube</a>
-      </li>
-    </ul>
-    <p class="footer-copyright">Website by</p>
-    <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-      <img src="img/logo-htmlacademy.svg" alt="Лого HTML-Academy" width="115" height="41">
-    </a>
-  </footer>
+      <div class="footer-item footer-copyright">
+        <p class="footer-copyright-text">Website by</p>
+        <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" alt="Лого HTML-Academy" width="115" height="41">
+        </a>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
