--- a/inner.html
+++ b/inner.html
@@ -10,167 +10,196 @@
 </head>
 
 <body>
-  <a href="index.html" class="main-logo">
-    <img src="img/logo_mobile.png" alt="Логотип" width="138" height="70">
-  </a>
-  <nav class="main-navigation">
-    <ul class="site-navigation">
-      <li>
-        <a href="#">Информация</a>
-      </li>
-      <li>
-        <a href="#">Фото и видео</a>
-      </li>
-      <li>
-        <a href="#">Карта штата</a>
-      </li>
-      <li>
-        <a href="inner.html" class="active">Гостиницы</a>
-      </li>
-    </ul>
-  </nav>
-  <form class="filter-search" action="https://echo.htmlacademy.ru" method="post">
-    <fieldset>
-      <legend>Инфраструктура</legend>
-      <ul class="filter-list">
+  <div class="content">
+    <div class="main-logo">
+      <a href="index.html">
+        <img src="img/logo_mobile.png" alt="Логотип Седоны" width="138" height="70">
+      </a>
+    </div>
+    <nav class="main-navigation">
+      <ul class="site-navigation">
         <li>
-          <input type="checkbox" class="visually-hidden" name="pool" id="infrastructure-pool" checked>
-          <label for="infrastructure-pool">Бассейн</label>
+          <a href="#">Информация</a>
         </li>
         <li>
-          <input type="checkbox" class="visually-hidden" name="parking" id="infrastructure-parking">
-          <label for="infrastructure-parking">Парковка</label>
+          <a href="#">Фото и видео</a>
         </li>
         <li>
-          <input type="checkbox" class="visually-hidden" name="wi-fi" id="infrastructure-wi-fi">
-          <label for="infrastructure-wi-fi">Бассейн</label>
+          <a href="#">Карта штата</a>
+        </li>
+        <li>
+          <a href="inner.html" class="active">Гостиницы</a>
         </li>
       </ul>
-    </fieldset>
-    <fieldset>
-      <legend>Тип жилья</legend>
-      <ul class="filter-list">
-        <li>
-          <input type="checkbox" class="visually-hidden" name="hotel" id="living-type-hotel" checked>
-          <label for="living-type-hotel">Гостиница</label>
-        </li>
-        <li>
-          <input type="checkbox" class="visually-hidden" name="motel" id="living-type-motel" checked>
-          <label for="living-type-motel">Парковка</label>
-        </li>
-        <li>
-          <input type="checkbox" class="visually-hidden" name="wi-fi" id="living-type-apartment" checked>
-          <label for="living-type-apartment">Бассейн</label>
-        </li>
-      </ul>
-    </fieldset>
-    <p>
-      <label for="price-one-night">Стоимость в сутки (Р):</label>
-    </p>
-    <p>
-      <input type="range" name="price" id="price-one-night" min="0" max="3000" step="1">
-    </p>
-    <p>
-      <input type="submit" value="Показать" class="filter-search-btn">
-    </p>
-  </form>
-  <div class="sorting">
-    <h3>Найдено: 3</h3>
-    <p>Сортировка:</p>
-    <ul class="sorting-list">
-      <li>
-        <a href="#" class="sorting-list-active">По цене</a>
+    </nav>
+    <form class="filter-search" action="https://echo.htmlacademy.ru" method="post">
+      <div class="filter-search-options">
+        <fieldset>
+          <legend>Инфраструктура</legend>
+          <ul class="filter-list">
+            <li>
+              <input type="checkbox" class="visually-hidden" name="pool" id="infrastructure-pool" checked>
+              <label for="infrastructure-pool">Бассейн</label>
+            </li>
+            <li>
+              <input type="checkbox" class="visually-hidden" name="parking" id="infrastructure-parking">
+              <label for="infrastructure-parking">Парковка</label>
+            </li>
+            <li>
+              <input type="checkbox" class="visually-hidden" name="wi-fi" id="infrastructure-wi-fi">
+              <label for="infrastructure-wi-fi">Бассейн</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Тип жилья</legend>
+          <ul class="filter-list">
+            <li>
+              <input type="checkbox" class="visually-hidden" name="hotel" id="living-type-hotel" checked>
+              <label for="living-type-hotel">Гостиница</label>
+            </li>
+            <li>
+              <input type="checkbox" class="visually-hidden" name="motel" id="living-type-motel" checked>
+              <label for="living-type-motel">Парковка</label>
+            </li>
+            <li>
+              <input type="checkbox" class="visually-hidden" name="wi-fi" id="living-type-apartment" checked>
+              <label for="living-type-apartment">Бассейн</label>
+            </li>
+          </ul>
+        </fieldset>
+      </div>
+      <div class="filter-search-price">
+        <p>
+          <label for="price-one-night">Стоимость в сутки (Р):</label>
+        </p>
+        <p>
+          <input type="range" name="price" id="price-one-night" min="0" max="3000" step="1">
+        </p>
+        <p>
+          <input type="submit" value="Показать" class="filter-search-btn">
+        </p>
+      </div>
+    </form>
+    <div class="sorting">
+      <div class="sorting-text">
+        <h3>Найдено: 3</h3>
+        <p>Сортировка:</p>
+        <ul class="sorting-list">
+          <li>
+            <a href="#" class="sorting-list-active">По цене</a>
+          </li>
+          <li>
+            <a href="#">По типу</a>
+          </li>
+          <li>
+            <a href="#">По рейтингу</a>
+          </li>
+        </ul>
+      </div>
+      <div class="sorting-list-btn">
+        <button class="visually-hidden">Кнопочка вверх</button>
+        <button class="visually-hidden">Кнопочка вниз</button>
+      </div>
+    </div>
+    <ul class="hotels-list">
+      <li class="hotels-list-item">
+        <div class="hotel">
+          <img src="img/hotels-1.jpg" alt="Фото гостиницы" width="150" height="100">
+          <div>
+            <h3 class="hotel-name">
+              <a href="#">Amara resort &amp; spa</a>
+            </h3>
+            <div class="hotel-information">
+              <div class="hotel-first-column">
+                <p>Гостиница</p>
+                <a href="#" class="hotel-more">Подробнее</a>
+              </div>
+              <div class="hotel-second-column">
+                <p>от 4000 р.</p>
+                <button class="hotel-book-btn button">Забронировать</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hotel-rating">
+          <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
+          <p class="hotel-rating-text">Рейтинг 8,5</p>
+        </div>
       </li>
-      <li>
-        <a href="#">По типу</a>
+      <li class="hotels-list-item">
+        <div class="hotel">
+          <img src="img/hotels-2.jpg" alt="Фото апартаментов" width="150" height="100">
+          <div>
+            <h3 class="hotel-name">
+              <a href="#">Desert Quail Inn</a>
+            </h3>
+            <div class="hotel-information">
+              <div class="hotel-first-column">
+                <p>Мотель</p>
+                <a href="#" class="hotel-more">Подробнее</a>
+              </div>
+              <div class="hotel-second-column">
+                <p>от 3000 р.</p>
+                <button class="hotel-book-btn button">Забронировать</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hotel-rating">
+          <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
+          <p class="hotel-rating-text">Рейтинг 8,9</p>
+        </div>
       </li>
-      <li>
-        <a href="#">По рейтингу</a>
+      <li class="hotels-list-item">
+        <div class="hotel">
+          <p>
+            <img src="img/hotels-3.jpg" alt="Фото апартаментов" width="150" height="100">
+          </p>
+          <div>
+            <h3 class="hotel-name">
+              <a>Desert Quail Inn</a>
+            </h3>
+            <div class="hotel-information">
+              <div class="hotel-first-column">
+                <p>Апартаменты</p>
+                <a href="#" class="hotel-more">Подробнее</a>
+              </div>
+              <div class="hotel-second-column">
+                <p>от 2000 р.</p>
+                <button class="hotel-book-btn button">Забронировать</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hotel-rating">
+          <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
+          <p class="hotel-rating-text">Рейтинг 9,2</p>
+        </div>
       </li>
     </ul>
-    <button class="visually-hidden">Кнопочка вверх</button>
-    <button class="visually-hidden">Кнопочка вниз</button>
+    <footer class="main-footer">
+
+      <p class="footer-hashtag footer-item">#Visitsedona</p>
+      <ul class="social-btn-list footer-item">
+        <li>
+          <a href="#" class="social-btn social-btn-twitter" aria-label="Твиттер">Twitter</a>
+        </li>
+        <li>
+          <a href="#" class="social-btn social-btn-twitter" aria-label="Фейсбук">Facebook</a>
+        </li>
+        <li>
+          <a href="#" class="social-btn social-btn-yt" aria-label="Ютьюб">Youtube</a>
+        </li>
+      </ul>
+      <div class="footer-item footer-copyright">
+        <p class="footer-copyright-text">Website by</p>
+        <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" alt="Лого HTML-Academy" width="115" height="41">
+        </a>
+      </div>
+    </footer>
   </div>
-  <ul class="hotels-list">
-    <li class="hotels-list-item hotel">
-      <p>
-        <img src="img/hotels-1.jpg" alt="Фото гостиницы" width="150" height="100">
-      </p>
-      <h3 class="hotel-name">
-        <a href="#">Amara resort &amp; spa</a>
-      </h3>
-      <div class="hotel-first-column">
-        <p>Гостиница</p>
-        <a href="#" class="hotel-more">Подробнее</a>
-      </div>
-      <div class="hotel-second-column">
-        <p>от 4000 р.</p>
-        <button class="hotel-book-btn button">Забронировать</button>
-      </div>
-      <div class="hotel-rating">
-        <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
-        <p class="hotel-rating-text">Рейтинг 8,5</p>
-      </div>
-    </li>
-    <li class="hotels-list-item hotel">
-      <p>
-        <img src="img/hotels-2.jpg" alt="Фото апартаментов" width="150" height="100">
-      </p>
-      <h3 class="hotel-name">
-        <a href="#">Desert Quail Inn</a>
-      </h3>
-      <div class="hotel-first-column">
-        <p>Мотель</p>
-        <a href="#" class="hotel-more">Подробнее</a>
-      </div>
-      <div class="hotel-second-column">
-        <p>от 3000 р.</p>
-        <button class="hotel-book-btn button">Забронировать</button>
-      </div>
-      <div class="hotel-rating">
-        <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
-        <p class="hotel-rating-text">Рейтинг 8,9</p>
-      </div>
-    </li>
-    <li class="hotels-list-item hotel">
-      <p>
-        <img src="img/hotels-3.jpg" alt="Фото апартаментов" width="150" height="100">
-      </p>
-      <h3 class="hotel-name">
-        <a>Desert Quail Inn</a>
-      </h3>
-      <div class="hotel-first-column">
-        <p>Апартаменты</p>
-        <a href="#" class="hotel-more">Подробнее</a>
-      </div>
-      <div class="hotel-second-column">
-        <p>от 2000 р.</p>
-        <button class="hotel-book-btn button">Забронировать</button>
-      </div>
-      <div class="hotel-rating">
-        <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
-        <p class="hotel-rating-text">Рейтинг 9,2</p>
-      </div>
-    </li>
-  </ul>
-  <footer class="main-footer">
-    <p class="footer-hashtag">#Visitsedona</p>
-    <ul class="social-btn-list">
-      <li>
-        <a href="#" class="social-btn social-btn-twitter" aria-label="Твиттер">Twitter</a>
-      </li>
-      <li>
-        <a href="#" class="social-btn social-btn-twitter" aria-label="Фейсбук">Facebook</a>
-      </li>
-      <li>
-        <a href="#" class="social-btn social-btn-yt" aria-label="YouTube">Youtube</a>
-      </li>
-    </ul>
-    <p class="footer-copyrigh">Website by</p>
-    <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Логотип HTML-Academy">
-      <img src="img/logo-htmlacademy.svg" alt="Лого HTML-Academy" width="115" height="41">
-    </a>
-  </footer>
 </body>
 
 </html>
