Исправление ошибок в сетке

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="main-navigation">
       <ul class="site-navigation">
         <li>
-          <a href="#">Информация</a>
+          <a>Информация</a>
         </li>
         <li>
           <a href="#">Фото и видео</a>
@@ -62,13 +62,13 @@
               <br> мотеле, все как в кино!</p>
           </li>
           <li class="recommendation-item">
-            <img src="img/icon-2.svg" alt="Еда" width="75" height="72">
+            <img src="img/icon-3.svg" alt="Еда" width="75" height="72">
             <h3>Еда</h3>
             <p>Всегда заказывайте фирменный бургер,
               <br> вы не разочаруетесь!</p>
           </li>
           <li class="recommendation-item">
-            <img src="img/icon-3.svg" alt="Сувениры" width="75" height="72">
+            <img src="img/icon-2.svg" alt="Сувениры" width="75" height="72">
             <h3>Сувениры</h3>
             <p>Не только китайского, но и местного
               <br> производства!</p>
