--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </section>
       <section class="reason-item reason-item-reverse">
         <div class="reason-item-text">
-          <h3>Там есть мост дьявола</h3>
+          <h3>Там есть <br> мост дьявола</h3>
           <span class="reason-number">№2</span>
           <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
@@ -103,7 +103,7 @@
       </section>
       <section class="searching">
         <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <div class="searching-box">
           <button type="button" class="button btn-search">Поиск гостиницы в Седоне</button>
           <div class="form-wrapper">
@@ -134,14 +134,14 @@
               </p>
               <p class="searching-form-quantity">
                 <label for="adults-quantity">Взрослые:</label>
-                <button class="btn-back" type="button">
+                <button class="btn-back" type="button" aria-label="Уменьшить">
                   <span class="btn-back-space visually-hidden">-</span>
                   <svg width="15" height="15">
                     <line x1="1" y1="9" x2="13" y2="9" stroke="#a9a9a9" stroke-width="3" />
                   </svg>
                 </button>
                 <input class="adults-quantity-input" type="text" name="quantity" id="adults-quantity" min="1" placeholder="2">
-                <button class="btn-next" type="button">
+                <button class="btn-next" type="button" aria-label="Увеличить">
                   <span class="visually-hidden">+</span>
                   <svg width="15" height="15">
                     <line x1="1" y1="9" x2="13" y2="9" stroke="#a9a9a9" stroke-width="3" />
@@ -149,14 +149,14 @@
                   </svg>
                 </button>
                 <label for="children-quantity">Дети:</label>
-                <button class="btn-back" type="button">
-                  <span class="btn-back-space visually-hidden">-</span>
+                <button class="btn-back" type="button" aria-label="Уменьшить">
+                  
                   <svg width="15" height="15">
                     <line x1="1" y1="9" x2="13" y2="9" stroke="#a9a9a9" stroke-width="3" />
                   </svg>
                 </button>
                 <input type="text" name="quantity" id="children-quantity" min="0" placeholder="0">
-                <button class="btn-next" type="button">
+                <button class="btn-next" type="button" aria-label="Увеличить">
                   <span class="visually-hidden">+</span>
                   <svg width="15" height="15">
                     <line x1="1" y1="9" x2="13" y2="9" stroke="#a9a9a9" stroke-width="3" />
